Ensure there are no visual gaps

--- a/app/assets/stylesheets/bubbles.css
+++ b/app/assets/stylesheets/bubbles.css
@@ -192,7 +192,7 @@
       content: "";
       display: block;
       inset-block-end: auto;
-      inset-block-start: 98%;
+      inset-block-start: 96%;
       inset-inline-start: 68%;
       position: absolute;
       transform: translateX(-50%) rotate(-20deg);
@@ -206,8 +206,8 @@
       content: "";
       display: block;
       inset-block-end: auto;
-      inset-block-start: calc(98% - var(--border-size) * 1.5);
-      inset-inline-start: 64%;
+      inset-block-start: calc(96% - var(--border-size) * 1.5);
+      inset-inline-start: 65%;
       position: absolute;
       transform: translateX(-50%) rotate(-20deg);
     }
